@@ -21,7 +21,7 @@
  *                                                                  *
  ********************************************************************/
 
-#include <config.h>
+#include "config.h"
 
 #define _GNU_SOURCE
 
